# rust-template

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: coverage.yml  fmt.yml  linter.yml  msrv.yml  test.yml
