[package]
name = "rust-template"
version = "0.0.0"
edition = "2021"

authors = ["Martijn Gribnau <garm@ilumeo.com>"]
# description = ""
# license = "Apache-2.0 WITH LLVM-exception"
# repository = "https://github.com/foresterre/{{repository}}"

#keywords = [{{keywords}}], # Choose up to 5
#categories = [{{categories}}] # Choose up to 5, from: https://crates.io/category_slugs

publish = false

rust-version = "1.56"

[dependencies]
